Closed Bug 39262 Opened 24 years ago Closed 24 years ago

folder pane doesn't show [un]subscribe changes to imap folders.

Categories

(SeaMonkey :: MailNews: Message Display, defect, P3)

x86
Windows NT
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: sspitzer, Assigned: jefft)

References

Details

(Whiteboard: [nsbeta2+][Will be minus on 6/15])

I can subscribe / unsubscribe using 6.0, and see that it worked by using 4.x, 
but within 6.0, the folder does appear, or go away.

also, in 4.x, when I use the twisty to close and open the imap server, we seem 
to be talking to the server and discovering if any folders have added or 
removed.

we aren't doing that in 6.0
moving to m17.
Status: NEW → ASSIGNED
Target Milestone: --- → M17
these are all subscribe bugs.   accepting.
QA Contact: lchiang → huang
this makes it look like subscribe /unsubscribe of imap aren't working, so making 
m16.

shouldn't be too hard to fix.
Target Milestone: M17 → M16
update summary.
Summary: subscribe / unsubscribe to an imap folder works, but the folder pane doesn't show it. → folder pane doesn't show [un]subscribe changes to imap folders.
making nsbeta2
Keywords: nsbeta2
Putting on [nsbeta2+][6/01] radar.  This work must be done by 06/01 or we may 
pull this for PR2.
Whiteboard: [nsbeta2+][6/01]
Due to slip in schedule, moving this bug from [6/01] to [Will be minus on 6/15] 
for fix deadline.
Whiteboard: [nsbeta2+][6/01] → [nsbeta2+][Will be minus on 6/15]
jefft is going to work on this.

thanks jefft.
Assignee: sspitzer → jefft
Status: ASSIGNED → NEW
Status: NEW → ASSIGNED
Fix checked in. Seth, will log anther bug to address the race condition. We need 
to wait for all the subscribe/unsubscribe urls done before re discover all 
folders.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
#42106 is the bug about the race condition.
Blocks: 42106
So, the fix check in the M16, M17 or both? 
Tip, M17...
Today's M16 is there but didn't get today's M17 build yet, will verify once we 
get the latest M17 build.
Cool!! This is working by using 06-13-09-M17 WinNT commercial build. 
Marking as verified!!
Status: RESOLVED → VERIFIED
Product: Browser → Seamonkey
Component: MailNews: Subscribe → MailNews: Message Display
QA Contact: huang → search
You need to log in before you can comment on or make changes to this bug.