fixed bug 39262 folder pane doesn't show [un]subscribe changes to imap folders; r=bienvenu, sspitzer